; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_pio_setupqueue_rx.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_pio_setupqueue_rx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwn_mac = type { %struct.bwn_softc* }
%struct.bwn_softc = type { i32 }
%struct.bwn_pio_rxqueue = type { i64, i32, %struct.bwn_mac* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bwn_mac*, %struct.bwn_pio_rxqueue*, i32)* @bwn_pio_setupqueue_rx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bwn_pio_setupqueue_rx(%struct.bwn_mac* %0, %struct.bwn_pio_rxqueue* %1, i32 %2) #0 {
  %4 = alloca %struct.bwn_mac*, align 8
  %5 = alloca %struct.bwn_pio_rxqueue*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.bwn_softc*, align 8
  store %struct.bwn_mac* %0, %struct.bwn_mac** %4, align 8
  store %struct.bwn_pio_rxqueue* %1, %struct.bwn_pio_rxqueue** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.bwn_mac*, %struct.bwn_mac** %4, align 8
  %9 = getelementptr inbounds %struct.bwn_mac, %struct.bwn_mac* %8, i32 0, i32 0
  %10 = load %struct.bwn_softc*, %struct.bwn_softc** %9, align 8
  store %struct.bwn_softc* %10, %struct.bwn_softc** %7, align 8
  %11 = load %struct.bwn_mac*, %struct.bwn_mac** %4, align 8
  %12 = load %struct.bwn_pio_rxqueue*, %struct.bwn_pio_rxqueue** %5, align 8
  %13 = getelementptr inbounds %struct.bwn_pio_rxqueue, %struct.bwn_pio_rxqueue* %12, i32 0, i32 2
  store %struct.bwn_mac* %11, %struct.bwn_mac** %13, align 8
  %14 = load %struct.bwn_softc*, %struct.bwn_softc** %7, align 8
  %15 = getelementptr inbounds %struct.bwn_softc, %struct.bwn_softc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @bhnd_get_hwrev(i32 %16)
  %18 = load %struct.bwn_pio_rxqueue*, %struct.bwn_pio_rxqueue** %5, align 8
  %19 = getelementptr inbounds %struct.bwn_pio_rxqueue, %struct.bwn_pio_rxqueue* %18, i32 0, i32 1
  store i32 %17, i32* %19, align 8
  %20 = load %struct.bwn_mac*, %struct.bwn_mac** %4, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i64 @bwn_pio_idx2base(%struct.bwn_mac* %20, i32 %21)
  %23 = load %struct.bwn_mac*, %struct.bwn_mac** %4, align 8
  %24 = call i64 @BWN_PIO_RXQOFFSET(%struct.bwn_mac* %23)
  %25 = add nsw i64 %22, %24
  %26 = load %struct.bwn_pio_rxqueue*, %struct.bwn_pio_rxqueue** %5, align 8
  %27 = getelementptr inbounds %struct.bwn_pio_rxqueue, %struct.bwn_pio_rxqueue* %26, i32 0, i32 0
  store i64 %25, i64* %27, align 8
  %28 = load %struct.bwn_mac*, %struct.bwn_mac** %4, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @bwn_dma_rxdirectfifo(%struct.bwn_mac* %28, i32 %29, i32 1)
  ret void
}

declare dso_local i32 @bhnd_get_hwrev(i32) #1

declare dso_local i64 @bwn_pio_idx2base(%struct.bwn_mac*, i32) #1

declare dso_local i64 @BWN_PIO_RXQOFFSET(%struct.bwn_mac*) #1

declare dso_local i32 @bwn_dma_rxdirectfifo(%struct.bwn_mac*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
